PROJECT(OpenSR)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
if(APPLE)
    #    list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/qt5/")
    list(APPEND CMAKE_PREFIX_PATH "/Volumes/TRANSCEND/Qt/5.12.11/clang_64")
endif()
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 1)
SET(API_VERSION 1)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)

# Enable C++11 support.
IF(NOT MSVC)
  ADD_DEFINITIONS(-std=c++11)
ENDIF()

OPTION(BUILD_ALL_TOOLS "Build tools for DAT files" NO)
OPTION(BUILD_RESOURCE_VIEWER "Build Resource Viewer tool" NO)
OPTION(BUILD_PLANET_VIEWER "Build Planet Viewer tool" NO)
OPTION(BUILD_QUEST_PLAYER "Build Quest Player tool" NO)
OPTION(BUILD_DAT_TOOLS "Build tools for DAT files" NO)
OPTION(BUILD_DAT_PLUGIN "Build plugin for DAT files" YES)
OPTION(BUILD_AB_TOOLS "Build plugin for AB files" NO)

IF(BUILD_ALL_TOOLS)
    SET(BUILD_RESOURCE_VIEWER YES)
    SET(BUILD_PLANET_VIEWER YES)
    SET(BUILD_QUEST_PLAYER YES)
    SET(BUILD_DAT_TOOLS YES)
    SET(BUILD_DAT_PLUGIN YES)
    SET(BUILD_AB_TOOLS YES)
ENDIF()

ADD_SUBDIRECTORY(Ranger)
ADD_SUBDIRECTORY(ImagePlugin)
ADD_SUBDIRECTORY(QM)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(World)
#ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(DatPlugin)


target_link_libraries(world )
add_subdirectory(extension)